==============
lxml changelog
==============

Under development
=================

Features added
--------------

Bugs fixed
----------

* Backported decref crash fix from 2.0

* Well hidden free-while-in-use crash bug in ObjectPath


1.3.5 (2007-10-22)
==================

Features added
--------------

Bugs fixed
----------

* lxml.etree could crash when adding more than 10000 namespaces to a
  document

* lxml failed to serialise namespace declarations of elements other than the
  root node of a tree


1.3.4 (2007-08-30)
==================

Features added
--------------

* The ``ElementMaker`` in ``lxml.builder`` now accepts the keyword arguments
  ``namespace`` and ``nsmap`` to set a namespace and nsmap for the Elements it
  creates.

* The ``docinfo`` on ElementTree objects has new properties ``internalDTD``
  and ``externalDTD`` that return a DTD object for the internal or external
  subset of the document respectively.

* Serialising an ElementTree now includes any internal DTD subsets that are
  part of the document, as well as comments and PIs that are siblings of the
  root node.

Bugs fixed
----------

* Parsing with the ``no_network`` option could fail

Other changes
-------------

* lxml now raises a TagNameWarning about tag names containing ':' instead of
  an Error as 1.3.3 did.  The reason is that a number of projects currently
  misuse the previous lack of tag name validation to generate namespace
  prefixes without declaring namespaces.  Apart from the danger of generating
  broken XML this way, it also breaks most of the namespace-aware tools in
  XML, including XPath, XSLT and validation.  lxml 1.3.x will continue to
  support this bug with a Warning, while lxml 2.0 will be strict about
  well-formed tag names (not only regarding ':').

* Serialising an Element no longer includes its comment and PI siblings (only
  ElementTree serialisation includes them).


1.3.3 (2007-07-26)
==================

Features added
--------------
