@@ -15,6 +15,14 @@ Bugs fixed
 
 * Well hidden free-while-in-use crash bug in ObjectPath
 
+Other changes
+-------------
+
+* The test suites now run ``gc.collect()`` in the ``tearDown()``
+  methods.  While this makes them take a lot longer to run, it also
+  makes it easier to link a specific test to garbage collection
+  problems that would otherwise appear in later tests.
+
 
 1.3.5 (2007-10-22)
 ==================
